--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,3 +1,8 @@
-home = /Library/Frameworks/Python.framework/Versions/3.9/bin
+home = /Library/Frameworks/Python.framework/Versions/3.8
+implementation = CPython
+version_info = 3.8.6.final.0
+virtualenv = 20.2.1
 include-system-site-packages = false
-version = 3.9.0
+base-prefix = /Library/Frameworks/Python.framework/Versions/3.8
+base-exec-prefix = /Library/Frameworks/Python.framework/Versions/3.8
+base-executable = /Library/Frameworks/Python.framework/Versions/3.8/bin/python3.8
