--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -8,4 +8,7 @@ RUN pip install pandas
 RUN pip install torch-scatter torch-sparse torch-cluster torch-spline-conv torch-geometric -f https://data.pyg.org/whl/torch-1.10.0+cu113.html
 RUN pip install jupyterlab
 
+ARG tag
+ENV JAQPOTPY_DOCKER==$tag
+
 CMD ["jupyter", "lab", "--port=8888", "--no-browser", "--ip=0.0.0.0", "--allow-root"]
