--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,9 @@ jaqpotpy/models/generative/.DS_Store
 jaqpotpy/models/tests/.DS_Store
 jaqpotpy/models/tests/.DS_Store
 jaqpotpy/models/tests/data/gdb9.sdf
+jaqpotpy/.DS_Store
+.DS_Store
+jaqpotpy/.DS_Store
+jaqpotpy/models/.DS_Store
+.DS_Store
+jaqpotpy/models/.DS_Store
