--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,12 @@ torch-geometric
 kennard-stone
 mendeleev
 pymatgen
-ase
+
+# TORCH - GEOMETRIC (KEEP IT LAST)
+-f https://data.pyg.org/whl/torch-1.13.0+cpu.html
+torch-scatter
+torch-sparse
+torch-cluster
+torch-spline-conv
+torch-geometric
+# pyg-lib
