--- a/requirements.txt
+++ b/requirements.txt
@@ -12,30 +12,12 @@ kennard-stone
 mendeleev
 pymatgen
 
+torch==1.13.0
 
-#############
-## PyTorch ##
-#############
-
-# torch 1.13-cpu-windows-python3.10
-https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp310-cp310-win_amd64.whl
-
-
-###########################################################
-## PyG compatible with torch 1.13-cpu-windows-python3.10 ##
-###########################################################
-
-# torch-scatter 2.1.0
-https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_scatter-2.1.0%2Bpt113cpu-cp310-cp310-win_amd64.whl
-
-# torch-sparse 0.6.17
-https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_sparse-0.6.17%2Bpt113cpu-cp310-cp310-win_amd64.whl
-
-# torch-cluster 1.6.1
-https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_cluster-1.6.1%2Bpt113cpu-cp310-cp310-win_amd64.whl
-
-# torch-spline-conv 1.2.2
-https://data.pyg.org/whl/torch-1.13.0%2Bcpu/torch_spline_conv-1.2.2%2Bpt113cpu-cp310-cp310-win_amd64.whl
+torch-cluster==1.6.0+pt113cpu -f https://data.pyg.org/whl/torch-1.13.0+cpu.html
+torch-scatter==2.1.0+pt113cpu -f https://data.pyg.org/whl/torch-1.13.0+cpu.html
+torch-sparse==0.6.15+pt113cpu -f https://data.pyg.org/whl/torch-1.13.0+cpu.html
+torch-spline-conv==1.2.1+pt113cpu -f https://data.pyg.org/whl/torch-1.13.0+cpu.html
 
 # torch-geometric
-torch_geometric
+torch_geometric==2.2.0
