fix: add versions for torch and torch geometric

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,23 +8,19 @@ rdkit-pypi
 mordred
 scikit-learn
 tqdm
-torch
-torch-scatter
-torch-sparse
-torch-cluster
-torch-spline-conv
-torch-geometric
 kennard-stone
 mendeleev
 pymatgen
 skl2onnx
 onnxruntime
 
-# TORCH - GEOMETRIC (KEEP IT LAST)
+# Torch requirements
+torch==2.3.0
+torch-geometric==2.3.1
+# TORCH - GEOMETRIC OPTIONAL DEPENDENCIES (KEEP IT LAST)
 -f https://data.pyg.org/whl/torch-2.3.0+cpu.html
 torch-scatter
 torch-sparse
 torch-cluster
 torch-spline-conv
-torch-geometric
 # pyg-lib
