--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pydotplus==2.0.2
 requests==2.32.2
 pydantic==2.7.1
 rdkit-pypi==2022.9.5
-mordred==1.2.0
+mordredcommunity==2.0.5 # Used as a replacement of mordred descriptors. Handles descriptor generation errors
 scikit-learn==1.5.0
 tqdm==4.66.4
 kennard-stone==2.2.1
