--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,3 +37,8 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    # Enforce PR title to the conventional commit format
+    - uses: radulle/pullforcer@v1.0.0
+      with:
+        pr-title-regexp: '^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test){1}(?:\(([a-z\-\.,]+)\))?(!)?: ([0-9a-z\-\., <>()\[\]]{4,})$'
+
