--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      # Enforce conventional commit format
+    - uses: amannn/action-semantic-pull-request@v5
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -38,8 +42,4 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-    # Enforce PR title to the conventional commit format
-    - uses: radulle/pullforcer@v1.0.0
-      with:
-        pr-title-regexp: '^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test){1}(?:\(([a-z\-\.,]+)\))?(!)?: ([0-9a-z\-\., <>()\[\]]{4,})$'
-
+    
