--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Build
 
 on:
   push:
@@ -19,6 +19,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      # Enforce conventional commit format
+    - uses: amannn/action-semantic-pull-request@v5
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -37,3 +41,4 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    
