feat: Fully functional torch model upload
This commit provides:
- Ready for deployment torch models are implemented
- Everything up to date with the current structure of the API

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,9 @@ jaqpotpy/models/.DS_Store
 jaqpotpy/models/.DS_Store
 .DS_Store
 jaqpotpy/models/tests/.DS_Store
+
+*.pkl
+*.json
+venv-jaqpotpy/
+*.txt
+*.pt
