--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,9 @@ mendeleev==0.16.2
 pymatgen==2024.5.1
 skl2onnx==1.16.0
 onnxruntime==1.18.0
-
 # Torch requirements
 torch==2.3.0
 torch-geometric==2.3.1
 torchvision==0.18.0
+-f https://data.pyg.org/whl/torch-2.3.0+cpu.html # Only way to work
+torch-sparse==0.6.18
