--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ skl2onnx==1.16.0
 onnxruntime==1.18.0
 httpx==0.27.0
 attrs==23.2.0
+compress-pickle==2.1.0
 # Torch requirements
 torch==2.3.0
 torch-geometric==2.3.1
