--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,5 @@ compress-pickle==2.1.0
 torch==2.3.0
 torch-geometric==2.3.1
 torchvision==0.18.0
+#-f https://data.pyg.org/whl/torch-2.3.0+cpu.html # Only way to work
+#torch-sparse==0.6.18
