--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ python-keycloak==4.3.0
 ruff==0.6.3
 # Torch requirements
 torch==2.3.0
-torch-geometric==2.3.1
+torch-geometric==2.5.0
 torchvision==0.18.0
-#-f https://data.pyg.org/whl/torch-2.3.0+cpu.html # Only way to work
-#torch-sparse==0.6.18
+-f https://data.pyg.org/whl/torch-2.3.0+cpu.html
+torch-sparse==0.6.18
