--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ httpx==0.27.0
 attrs==23.2.0
 python-keycloak==4.3.0
 ruff==0.6.3
+polling==0.5.0
 # Torch requirements
 torch==2.3.0
 torch-geometric==2.5.0
