--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ attrs==23.2.0
 python-keycloak==4.3.0
 ruff==0.6.3
 polling2==0.5.0
+python-dotenv==1.0.1
 # Torch requirements
 torch==2.3.0
 torch-geometric==2.5.0
