--- a/.github/workflows/openapi_generate.yml
+++ b/.github/workflows/openapi_generate.yml
@@ -10,6 +10,11 @@ jobs:
   generate-openapi:
     runs-on: ubuntu-latest
 
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
+
     steps:
       # Check out the current repository
       - name: Checkout repository
@@ -29,18 +34,4 @@ jobs:
           chmod +x ./etc/openapi-generate.sh
           ./etc/openapi-generate.sh
 
-      # Configure Git to commit changes
-      - name: Configure Git
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-      # Commit and push changes to the main branch
-      - name: Commit and push changes
-        run: |
-          git checkout main  
-          git add .
-          git commit -m "Auto-update OpenAPI client"
-          git push origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: stefanzweifel/git-auto-commit-action@v5
