--- a/.github/workflows/openapi_generate.yml
+++ b/.github/workflows/openapi_generate.yml
@@ -2,9 +2,6 @@ name: OpenAPI Generation
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - feat/openapi-script
 
 jobs:
   generate-openapi:
@@ -35,4 +32,5 @@ jobs:
           ./etc/openapi-generate.sh
 
       - uses: stefanzweifel/git-auto-commit-action@v5
-
+        with:
+          commit_message: "chore: update openapi files"
