--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,8 @@ python-dotenv==1.0.1
 # Torch requirements
 torch==2.3.0
 torch-geometric==2.5.0
-torchvision==0.18.0
--f https://data.pyg.org/whl/torch-2.3.0+cpu.html
-torch-sparse==0.6.18
+# -f https://data.pyg.org/whl/torch-2.3.0+cpu.html
+# torch-sparse==0.6.18
 ###
 onnxmltools==1.12.0
 xgboost==2.1.1
