--- a/ruff.toml
+++ b/ruff.toml
@@ -1,3 +1,5 @@
 [lint]
 ignore = ["D100", "E722", "F401", "F403"]
 exclude = ["jaqpotpy/api/openapi/**"]
+[format]
+exclude = ["jaqpotpy/api/openapi/**"]
