fix: run format after generating openapi

--- a/.github/workflows/openapi_generate.yml
+++ b/.github/workflows/openapi_generate.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           chmod +x ./etc/openapi-generate.sh
           ./etc/openapi-generate.sh
+          ruff format -- --fix
 
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
