--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -15,10 +15,8 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.10'
-      - name: Install pypa/setuptools
-        run: >-
-          python -m
-          pip install wheel
+      - name: Install Hatch
+        uses: pypa/hatch@install
       - name: Extract tag name
         id: tag
         run: echo ::set-output name=TAG_NAME::$(echo $GITHUB_REF | cut -d / -f 3)
@@ -28,7 +26,7 @@ jobs:
           sed -i "s/{{VERSION_PLACEHOLDER}}/${{ steps.tag.outputs.TAG_NAME }}/g" src/__init__.py
       - name: Build a binary wheel
         run: >-
-          python setup.py sdist bdist_wheel
+          hatch build
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
