--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ ruff==0.6.3
 polling2==0.5.0
 python-dotenv==1.0.1
 setuptools==75.6.0
+jaqpot-api-client==6.40.7
 # Torch requirements
 torch==2.3.0
 torch-geometric==2.5.0
