--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ polling2==0.5.0
 python-dotenv==1.0.1
 setuptools==75.6.0
 jaqpot-api-client==6.40.7
+jaqpot-python-sdk==6.0.2
 # Torch requirements
 torch==2.3.0
 torch-geometric==2.5.0
