--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ dependencies = [
     "torch==2.3.0",
     "tqdm==4.66.4",
     "xgboost==2.1.1",
+    "jaqpot-api-client==6.40.7",
+    "jaqpot-python-sdk==6.0.2"
 ]
 
 [[project.authors]]
