--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,17 @@ classifiers = [
 dependencies = [
     "torch>=2.0.0",
     "onnx>=1.17.0",
+    "onnxmltools>=1.12.0",
     "onnxruntime>=1.19.0",
     "skl2onnx>=1.17.0",
     "httpx",
+    "polling2>=0.5.0",
     "pydantic>=2.0",
-    "jaqpot-api-client>=6.40.7"
+    "requests>=2.32.2",
+    "jaqpot-api-client>=6.40.7",
+    "pandas>=2.2.2",
+    "scikit-learn>=1.5.0",
+    "setuptools>=75.0.0"
 ]
 
 [[project.authors]]
