--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "jaqpot-api-client>=6.40.7",
     "pandas>=2.2.2",
     "scikit-learn>=1.5.0",
-    "setuptools>=75.0.0"
+    "setuptools>=75.0.0",
+    "python-keycloak>=4.3.0",
 ]
 
 [[project.authors]]
