--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
     "scikit-learn>=1.5.0",
     "setuptools>=75.0.0",
     "python-keycloak>=4.3.0",
-    "jaqpot-python-sdk>=6.0.2"
+    "jaqpot-python-sdk>=6.0.2",
+    "torch-geometric>=2.5.0"
 ]
 
 [[project.authors]]
